JavaFX Helpers 1.22.0
* Java 25, JavaFX 25
* Maven 3.9.11